--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bidict==0.22.0
 click==8.1.3
 colorama==0.4.4
 ecal5 @ file:///C:/Users/Jonathan/Downloads/ecal5-5.10.1-cp310-cp310-win_amd64.whl
+pyserial>=3.5
 isort==5.10.1
 itsdangerous==2.1.2
 lazy-object-proxy==1.7.1
